# ogd_ai-metafairy

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
_streamlit-app/: config.yaml  metafairy.py  utils_functions.py  utils_projectinfo.md  utils_prompts.py
